# universal-iiif-studio

./: .env.example  .flake8  .gitignore  .lycheeignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .sesskey  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXES.md  LICENSE  NOTICE  OLD_AGENTS.md  README.md  SECURITY.md  SESSION_RESUME.md  STUDIO_REFACTOR.md  app.py  app_fasthtml.py  config.example.json  config.yaml  coverage.json  docusaurus.config.js  downloader.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  repomix.config.json  requirements-dev.txt  requirements.txt  setup.cfg  sidebars.js  studio_app.py  verify_image_processing.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  work-item.yml
.github/workflows/: ci.yml  docs-ci.yml  docs-site.yml  issue-label-sync.yml  pr-governance.yml  release.yml  wiki-sync.yml
docs/: ARCHITECTURE.md  CONFIG_REFERENCE.md  DOCUMENTAZIONE.md  FEATURES_INACTIVE_BACKLOG.md  HTTP_CLIENT.md  ISSUE_TRIAGE_POLICY.md  UI_MOCKUP.md  WIKI_MAINTENANCE.md  index.md
docs/adr/: 0001-docs-information-architecture.md  0002-docs-site-and-wiki-publishing-model.md
docs/explanation/: architecture.md  discovery-provider-model.md  export-and-pdf-model.md  job-lifecycle.md  security-and-path-safety.md  storage-model.md
docs/guides/: discovery-and-library.md  first-manuscript-workflow.md  pdf-export.md  studio-workflow.md  troubleshooting.md
docs/intro/: getting-started.md
docs/project/: contributing.md  issue-triage.md  testing-guide.md  wiki-maintenance.md
docs/reference/: cli.md  configuration.md  provider-support.md  runtime-paths.md
docs/wiki/: Common-Workflows.md  Configuration.md  FAQ.md  Getting-Started.md  Home.md  PDF-Export-Profiles.md  Studio-Workflow.md  Troubleshooting.md
fasthtml_ui/: __init__.py  ocr_state.py
fasthtml_ui/components/: __init__.py  editor.py  layout.py  navigation.py  ocr_panel.py  viewer.py
fasthtml_ui/components/studio/: cropper.py  history.py  info.py  snippets.py  tabs.py  transcription.py
fasthtml_ui/pages/: studio.py
fasthtml_ui/routes/: __init__.py  api.py  discovery.py  studio.py
iiif_downloader/: cli.py  config.py  config_manager.py  core.py  export_studio.py  iiif_tiles.py  jobs.py  logger.py  pdf_utils.py  thumbnail_utils.py  utils.py
iiif_downloader/logic/: __init__.py  downloader.py
iiif_downloader/ocr/: __init__.py  model_manager.py  processor.py  storage.py
iiif_downloader/resolvers/: base.py  discovery.py  gallica.py  generic.py  oxford.py  vatican.py
iiif_downloader/storage/: __init__.py  vault_manager.py
iiif_downloader/ui/: components.py  discovery.py  notifications.py  search.py  state.py  studio.py  styling.py
iiif_downloader/ui/components/: __init__.py  settings_panel.py  viewer.py
iiif_downloader/ui/pages/: __init__.py
scripts/: check_changelog_policy.py  check_docs_integrity.py  check_docs_language.py  check_release_consistency.py  clean_user_data.py  sync_wiki.py
src/: studio_app.py
src/css/: custom.css
src/studio_ui/: __init__.py  library_options.py  theme.py
src/studio_ui/common/: library_constants.py  title_utils.py  toasts.py
src/studio_ui/components/: discovery.py  discovery_download_panel.py  discovery_form.py  discovery_page.py  discovery_results.py  export.py  layout.py  library.py  library_cards.py  library_filters.py  library_stats.py  settings.py  viewer.py
src/studio_ui/components/settings/: main.py  (+3 more)
src/studio_ui/pages/: studio.py
src/studio_ui/routes/: api.py  api_helpers.py  discovery.py  discovery_handlers.py  discovery_helpers.py  discovery_persistence.py  export.py  export_handlers.py  library.py  library_handlers.py  library_query.py  settings.py  settings_handlers.py  stats.py  stats_handlers.py  studio.py  studio_handlers.py
src/universal_iiif_cli/: __init__.py  cli.py
src/universal_iiif_cli/tools/: verify_image_processing.py
src/universal_iiif_core/: _rate_limiter.py  config_manager.py  config_validation.py  exceptions.py  export_studio.py  http_client.py  iiif_logic.py  iiif_resolution.py  iiif_tiles.py  image_settings.py  jobs.py  library_catalog.py  logger.py  network_policy.py  pdf_profiles.py  pdf_utils.py  providers.py  thumbnail_utils.py  utils.py
src/universal_iiif_core/discovery/: __init__.py  contracts.py  orchestrator.py  search_adapters.py
src/universal_iiif_core/logic/: download_helpers.py  downloader.py  downloader_pdf.py  downloader_runtime.py
src/universal_iiif_core/resolvers/: archive_org.py  cambridge.py  discovery.py  ecodices.py  estense.py  gallica.py  generic.py  harvard.py  heidelberg.py  institut.py  internetculturale.py  loc.py  mag_parser.py  manifest_fetch.py  models.py  parsers.py  registry.py  vatican.py
src/universal_iiif_core/services/: scan_optimize.py
static/: shortcuts.js
tests/: README.md  conftest.py  test_cli_unit.py  test_config_manager_validation_logging.py  test_config_validation.py  test_delete_manuscript_removes_files.py  test_discovery_download_manager.py  test_discovery_handlers_resolve_manifest.py  test_discovery_orchestrator.py  test_discovery_resolvers.py  test_discovery_resolvers_unit.py  test_discovery_search_adapters.py  test_download_status_endpoint.py  test_downloader_pdf_priority.py  test_downloader_pdf_unit.py  test_downloader_resume.py  test_downloader_runtime_staging.py  test_downloader_runtime_unit.py  test_downloader_unit.py  test_estense_unit.py  test_export_handlers.py  test_export_service.py  test_export_studio_pdf.py  test_export_studio_thumbnail_html.py  test_export_studio_toggle_query_params.py  test_export_studio_ui_imports.py  test_handlers_helpers_unit.py  test_http_client.py  test_http_client_unit.py  test_iccu_unit.py  test_iiif_logic_unit.py  test_iiif_tiles_unit.py  test_jobs_queue_manager.py  test_jobs_unit.py  test_jobs_vault_integration.py  test_layout_library_filters.py  test_library_catalog_unit.py  test_library_components.py  test_library_handlers.py  test_live.py  (+30 more)
tests/fixtures/: estense_search_sample.json  gallica_sample.xml  iccu_mag_sample.xml
(+68 files in other folders)
