[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-iiif"
version = "0.7.0"
description = "Universal IIIF Downloader & Studio for working with IIIF manuscripts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "python-fasthtml",
  "uvicorn",
  "python-multipart",
  "python-dotenv",
  "defusedxml",
  "Pillow>=10.0.0",
  "pandas",
  "requests>=2.31.0",
  "beautifulsoup4",
  "tqdm>=4.66.0",
  "PyMuPDF",
  "img2pdf>=0.5.1",
  "openai",
  "anthropic",
]

[project.urls]
Homepage = "https://github.com/yourusername/universal-iiif"
Repository = "https://github.com/yourusername/universal-iiif"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Manteniamo le tue impostazioni base
line-length = 120
target-version = "py310"

# Cartelle escluse dal linting
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  "venv",
  "__pycache__",
  "downloads",
  "logs",
  "models",
  "temp_images",
  "build",
  "dist",
]

[tool.ruff.lint]
# 1. REGOLE ATTIVATE (Select)
# Abbiamo ampliato drasticamente il controllo
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # Isort (ordinamento import automatico)
  "N",   # Pep8-naming (nomi classi/funzioni)
  "UP",  # Pyupgrade (sintassi moderna)
  "B",   # Bugbear (scova bug logici)
  "S",   # Bandit (SICUREZZA)
  "D",   # Pydocstyle (DOCUMENTAZIONE obbligatoria)
  "SIM", # Simplify (semplificazione codice)
  "A",   # Builtins (evita sovrascrittura nomi nativi)
  "PTH", # Pathlib (obbliga all'uso di Path invece di os.path)
  "C90", # McCabe (complessità ciclica)
]

# 2. REGOLE IGNORATE
# Utile per non essere troppo bloccati durante lo sviluppo rapido
ignore = [
  "D100", # Manca docstring nel modulo
  "D104", # Manca docstring nel pacchetto (__init__.py)
  "D203", # Conflitto spaziature docstring
  "D213", # Conflitto spaziature docstring
  "S101", # Permette l'uso di assert (fondamentale per i test)
]

[tool.ruff.lint.pydocstyle]
convention = "google" # Standard per le docstring

[tool.ruff.lint.mccabe]
max-complexity = 10 # Ti avvisa se una funzione è troppo "ingarbugliata"

[tool.ruff.lint.per-file-ignores]
# Manteniamo il tuo ignore specifico per i test
"tests/**/*.py" = ["E402", "S101"]

[tool.ruff.format]
# Configurazione per il formatter (stile Black)
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
venv = ".venv"

# Regole: parti leggero o vai su "strict" se il progetto è nuovo
typeCheckingMode = "basic"         # o "strict" per masochisti/perfezionisti
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportMissingTypeStubs = "none"

# Aiuta l'agente a non fare confusione con le importazioni
reportMissingImports = true

[tool.semantic_release]
version_variables = [
  "pyproject.toml:project.version",
  "src/universal_iiif_core/__init__.py:__version__",
]
changelog_file = "CHANGELOG.md"
assets = []
commit_message = "chore(release): {version} [skip ci]"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true
build_command = ""

[tool.semantic_release.branches.main]
match = "main"

[project.scripts]
iiif-studio = "studio_app:main"
iiif-cli = "universal_iiif_cli.cli:main"
